Fixed alignment of buttonss in main menu.

--- a/RecipeGenerator.RazorPages/wwwroot/css/custom.css
+++ b/RecipeGenerator.RazorPages/wwwroot/css/custom.css
@@ -137,6 +137,10 @@
     display: flex;
     flex-direction: column;
     align-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 
 .nav-button-icon {
